@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-10T08:18:46Z",
-  "count_outdated" : 1838,
-  "uniques_outdated" : 390,
+  "timestamp" : "2023-10-10T16:19:16Z",
+  "count_outdated" : 1840,
+  "uniques_outdated" : 391,
   "count" : 1964,
   "uniques" : 407,
   "views" : [
-    {
-      "timestamp": "2023-09-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 4,
