@@ -1,12 +1,7 @@
 {
-  "count": 126,
-  "uniques": 17,
+  "count": 124,
+  "uniques": 16,
   "views": [
-    {
-      "timestamp": "2023-09-26T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 4,
