@@ -1,3 +1,12 @@
+2023-10-10T16:19:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6472044369 # 1973
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
+* notice: last 14d: unq all: 16 124
+* notice: prev accum: outdated-unq outdated-all / unq all: 390 1838 / 407 1964
+* notice: next accum: outdated-unq outdated-all / unq all: 391 1840 / 407 1964
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-26] / []
+
 2023-10-10T08:18:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6466592858 # 1972
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
